# pr_inspector

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  railway.toml  server.py  test_client.py
pr_inspector/: __init__.py  config.py  env_loader.py  mcp_instance.py  server.py  server_http.py  test_client.py
pr_inspector/services/: __init__.py  github_service.py  llm_service.py  openai_service.py  providers.py
pr_inspector/tools/: __init__.py  checklist.py
pr_inspector/tools/checklist/: models.py  prompt.py  tool.py
pr_inspector/tools/tests/: __init__.py
pr_inspector/tools/tests/e2e/: README.md  __init__.py  run_e2e_tests.sh  test_create_pr_checklist.py
