[project]
name = "pr-inspector"
version = "0.1.0"
description = "PR Inspector MCP Server"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.9.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = ["server.py"]

