[project]
name = "pr-inspector"
version = "0.1.0"
description = "PR Inspector MCP Server"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.9.0",
    "langchain>=1.2.0",
    "openai>=1.0.0",
    "pygithub>=2.8.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
pr-inspector = "pr_inspector.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pr_inspector"]
